se agrega pestana de resgistrarse

--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -9,6 +9,9 @@
 <body>
     <header class="header">
         <ul class="links">
+
+            <li><a href="registro.html"><h6 class="link" style="color: white;">Iniciar Sesion</h6></a></li>
+
             <li><a href="PsicologiaEIa.html"><h6 class="link" style="color: white;">Psicologia e IA</h6></a></li>
 
             <li><a href="https://www.16personalities.com/es" target="_blank"><h6 class="link" style="color: white;">Test de Personalidad</h6></a></li>
@@ -21,7 +24,9 @@
         <h1>Explora tu mente <br/> Psicología & IA</h1>
         
         <img src="../assets/imagen-cerebro.webp" alt="Imagen relacionada con psicología" class="imagen">
-    </div>
+    </div> 
+
+    
 
     <footer>
         <p>&copy; 2025 Abril Maci. Todos los derechos reservados.</p> <!--profe si ves esto: se q mucho no se usa lo del &copy pero lo aprendi y queria ponerlo  -->
