cambios en diseno de pagina, se va pestana registro :,(

--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -3,20 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Inicio</title>
     <link rel="stylesheet" href="../styles/inicio.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap" rel="stylesheet">
+
+
+
 </head>
 <body>
     <header class="header">
+        <p class="title"> A B R I L   M A C I </p>
         <ul class="links">
-
-            <li><a href="registro.html"><h6 class="link" style="color: white;">Iniciar Sesion</h6></a></li>
-
-            <li><a href="PsicologiaEIa.html"><h6 class="link" style="color: white;">Psicologia e IA</h6></a></li>
-
-            <li><a href="https://www.16personalities.com/es" target="_blank"><h6 class="link" style="color: white;">Test de Personalidad</h6></a></li>
-
-            <li><a href="https://www.psimammoliti.com/recursos/blog/descubriendo-los-sesgos-cognitivos-como-nuestro-cerebro-nos-engana" target="_blank"><h6 class="link" style="color: white;">Descubre tus Sesgos</h6></a></li>
+            <li><a href="registro.html" class="link">Iniciar Sesión</a></li>
+            <li><a href="PsicologiaEIa.html" class="link">Psicología e IA</a></li>
+            <li><a href="https://www.16personalities.com/es" target="_blank" class="link">Test de Personalidad</a></li>
+            <li><a href="https://www.psimammoliti.com/recursos/blog/descubriendo-los-sesgos-cognitivos-como-nuestro-cerebro-nos-engana" target="_blank" class="link">Descubre tus Sesgos</a></li>
         </ul>
     </header>
 
@@ -29,7 +32,7 @@
     
 
     <footer>
-        <p>&copy; 2025 Abril Maci. Todos los derechos reservados.</p> <!--profe si ves esto: se q mucho no se usa lo del &copy pero lo aprendi y queria ponerlo  -->
+        <p>&copy; 2025 Abril Maci. </p> <!--profe si ves esto: se q mucho no se usa lo del &copy pero lo aprendi y queria ponerlo  -->
     </footer>
 </body>
 </html>
