--- a/pages/PsicologiaEIa.html
+++ b/pages/PsicologiaEIa.html
@@ -3,13 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Psicologia e IA</title>
     <link rel="stylesheet" href="../styles/inicio.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header class="header">
+        <p class="title" > A B R I L    M A C I </p>
         <ul class="links">
-            <li><a href="inicio.html"><h6 class="link" style="color: white;">Inicio</h6></a></li>
+            <li><a href="inicio.html" class="link"> Inicio</a></li>
     </header>
 
     <div>
@@ -25,6 +29,6 @@
 
     
     <footer>
-        <p>&copy; 2025 Abril Maci. Todos los derechos reservados.</p>
+        <p>&copy; 2025 Abril Maci. </p>
     </footer>
 </html>
