se agrega una parte interactiva

--- a/pages/Tabla.html
+++ b/pages/Tabla.html
@@ -22,6 +22,8 @@
             <li><a href="inicio.html" class="link"> Inicio</a></li>
     </header>
 
+    
+
 
     <div class="contenedor">
 
@@ -135,13 +137,13 @@
 
 
     <footer>
-        <a href="https://instagram.com/abrilmaci" target="_blank">
+        <a class= 'redes' href="https://instagram.com/abrilmaci" target="_blank">
             <i class="fa-brands fa-instagram instagram"></i>
         </a>
-        <a href="https://pinterest.com/abrilmaci" target="_blank">
+        <a class= 'redes' href="https://pinterest.com/abrilmaci" target="_blank">
             <i class="fa-brands fa-pinterest pinterest"></i>
         </a>
-        <a href="https://vs.co/vp72ad4l" target="_blank">
+        <a class= 'redes' href="https://vs.co/vp72ad4l" target="_blank">
             <i class="fa-brands fa-camera-retro vsco"></i>
         </a>
         <p>&copy; 2025 Abril Maci. </p>
