--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -22,7 +22,7 @@
         <p class="title"> A B R I L   M A C I </p>
         <ul class="links">
             <li><a href="Tabla.html" class="link">Tabla</a></li>
-            <li><a href="registro.html" class="link">Iniciar Sesión</a></li>
+            <li><a href="juegoInteractivo.html" class="link">Juego Interactivo</a></li>
            
         </ul>
     </header>
@@ -74,13 +74,13 @@
 
     <footer>
 
-        <a href="https://instagram.com/abrilmaci" target="_blank">
+        <a class= 'redes' href="https://instagram.com/abrilmaci" target="_blank">
             <i class="fa-brands fa-instagram instagram"></i> 
         </a>
-        <a href="https://pinterest.com/abrilmaci" target="_blank">
+        <a class= 'redes' href="https://pinterest.com/abrilmaci" target="_blank">
             <i class="fa-brands fa-pinterest pinterest"></i>  
         </a>
-        <a href="https://vs.co/vp72ad4l" target="_blank">
+        <a class= 'redes' href="https://vs.co/vp72ad4l" target="_blank" >
             <i class="fa-brands fa-camera-retro vsco"></i>
         </a>
         <p>&copy; 2025 Abril Maci. </p> <!--profe si ves esto: se q mucho no se usa lo del &copy pero lo aprendi y queria ponerlo  -->
