pagina de videos Disney

--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -23,6 +23,7 @@
         <ul class="links">
             <li><a href="Tabla.html" class="link">Tabla</a></li>
             <li><a href="juegoInteractivo.html" class="link">Juego Interactivo</a></li>
+            <li><a href="videos.html" class="link">Canciones de Disney</a></li>
            
         </ul>
     </header>
