se suben cambios mejorando detalles

--- a/pages/Tabla.html
+++ b/pages/Tabla.html
@@ -20,6 +20,8 @@
         <p class="title"> A B R I L M A C I </p>
         <ul class="links">
             <li><a href="inicio.html" class="link"> Inicio</a></li>
+            <li><a href="juegoInteractivo.html" class="link">Juego Interactivo</a></li>
+            <li><a href="videos.html" class="link">Canciones de Disney</a></li>
     </header>
 
     
