--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -30,8 +30,8 @@
 
 
 <div class="contenedor-presentacion">
-    <h1 class="text2">Presentacion</h1>
-    <h6 class="text">Soy Abril Maci, estudio Lic. en IT, tengo 21, trabajo como desarrolladora Full Stack en IT-Patagonia</h6>
+    <h1 class="text2">Presentación</h1>
+    <h6 class="text">Soy Abril Maci, estudio Licenciatura en Gestión de IT, tengo 21, trabajo como desarrolladora Full Stack en IT-Patagonia</h6>
 </div>
 
 
