--- a/pages/juegoInteractivo.html
+++ b/pages/juegoInteractivo.html
@@ -19,6 +19,8 @@
         <p class="title"> A B R I L  M A C I </p>
         <ul class="links">
             <li><a href="inicio.html" class="link">Inicio</a></li>
+            <li><a href="Tabla.html" class="link">Tabla</a></li>
+            <li><a href="videos.html" class="link">Canciones de Disney</a></li>
     </header>
 
     <h3>Debes presionar la imagen para ayudarme a hacer una pizza</h3>
