se cambia nombre archivo index

--- a/pages/horneado.html
+++ b/pages/horneado.html
@@ -18,7 +18,7 @@
     <header class="header">
         <p class="title"> A B R I L  M A C I </p>
         <ul class="links">
-            <li><a href="inicio.html" class="link">Inicio</a></li>
+            <li><a href="index.html" class="link">Inicio</a></li>
     </header>
 
 
@@ -44,7 +44,7 @@
             <label class="image" id="img60-label"><img src="../assets/imgJuegoInteractivo/Image (60).jpg"></label>
     
             <h1 class="pizza-amasada">Pizza lista, Felicidades!</h1>
-            <a href="inicio.html" class="boton-sigamos">Volver al Inicio</a>
+            <a href="index.html" class="boton-sigamos">Volver al Inicio</a>
         </div>
     </div>
 
