--- a/pages/videos.html
+++ b/pages/videos.html
@@ -17,7 +17,7 @@
     <header class="header">
         <p class="title"> A B R I L M A C I </p>
         <ul class="links">
-            <li><a href="inicio.html" class="link"> Inicio</a></li>
+            <li><a href="index.html" class="link"> Inicio</a></li>
             <li><a href="Tabla.html" class="link">Tabla</a></li>
             <li><a href="juegoInteractivo.html" class="link">Juego Interactivo</a></li>
            
