--- a/pages/decorado.html
+++ b/pages/decorado.html
@@ -18,7 +18,7 @@
     <header class="header">
         <p class="title"> A B R I L  M A C I </p>
         <ul class="links">
-            <li><a href="inicio.html" class="link">Inicio</a></li>
+            <li><a href="index.html" class="link">Inicio</a></li>
     </header>
 
 
