--- a/pages/juegoInteractivo.html
+++ b/pages/juegoInteractivo.html
@@ -18,7 +18,7 @@
     <header class="header">
         <p class="title"> A B R I L  M A C I </p>
         <ul class="links">
-            <li><a href="inicio.html" class="link">Inicio</a></li>
+            <li><a href="index.html" class="link">Inicio</a></li>
             <li><a href="Tabla.html" class="link">Tabla</a></li>
             <li><a href="videos.html" class="link">Canciones de Disney</a></li>
     </header>
