estoy harta me quiero recibir

--- a/pages/Tabla.html
+++ b/pages/Tabla.html
@@ -19,7 +19,7 @@
     <header class="header">
         <p class="title"> A B R I L M A C I </p>
         <ul class="links">
-            <li><a href="index.html" class="link"> Inicio</a></li>
+            <li><a href="../index.html" class="link"> Inicio</a></li>
             <li><a href="juegoInteractivo.html" class="link">Juego Interactivo</a></li>
             <li><a href="videos.html" class="link">Canciones de Disney</a></li>
     </header>
